provider dashboard,access folder added,

--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -22,7 +22,7 @@
         <span class="mx-2 text-info">Back</span>
     </a>
 </div>
-<div class="container p-sm-3 p-1 my-3  shadow rounded-3 bg-white">
+<div class="container p-sm-3    shadow rounded-3 white-bag">
     <form class="form-floating" method="post" asp-action="AccountInformation" asp-controller="AdminDash">
         <div class="row gx-4">
             <h4 class="text-body">Account Information</h4>
