--- a/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateProviderAccount.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="row justify-content-center">
+<div class="row justify-content-center bg-body-secondary">
     <div class="col-10 d-inline-flex justify-content-between">
         <div class="d-flex">
             <h4 class="h4 mt-5 mb-3">Create Provider Account</h4>
@@ -21,8 +21,8 @@
         </div>
     </div>
 </div>
-<div class="row justify-content-center">
-    <div class="col-10 rounded mb-3" style="box-shadow: 2px 2px 20px rgb(179, 177, 177);">
+<div class="row justify-content-center bg-body-secondary">
+    <div class="col-10 rounded mb-3 white-bag" style="box-shadow: 2px 2px 20px rgb(179, 177, 177);">
         <form asp-action="CreateProviderAccount" enctype="multipart/form-data">
             <div class="row">
                 <h6 class="my-3">Account Information</h6>
