--- a/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/BlockHistory.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="container-fluid" style="height:80%!important">
+<div class="container-fluid" style="height:80vh!important">
     <h4 class="py-3">Block history</h4>
     <div class="mx-0 row px-4 border-bottom-0 border border-secondary rounded-top pt-3 pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
@@ -38,7 +38,7 @@
         <button class="btn btn-outline-info" onclick="RemoveFilters()">Clear</button>
         <button class="btn btn-info mx-3" onclick="GetBlockPatientRecord()">Search</button>
     </div>
-    <div class="border-top-0 border border-secondary rounded-bottom  px-3 overflow-auto" style="height: 80% !important" id="ll">
+    <div class="border-top-0 border border-secondary rounded-bottom  px-3 overflow-auto " id="ll">
     </div>
 </div>
 
