--- a/HelloDoc/Views/AdminDash/Access/AccountAccess.cshtml
+++ b/HelloDoc/Views/AdminDash/Access/AccountAccess.cshtml
@@ -8,7 +8,7 @@
 
 @* ---------------------------------- *@
 <div class="container-fluid  bg-body-secondary">
-    <div class="container ">
+    <div class="container" style="height:80vh !important">
         <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
             <div class="mt-3">
                 <h3> Account Access </h3>
