--- a/HelloDoc/Views/AdminDash/RecordsMenu/ExploreRecords.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/ExploreRecords.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container-fluid  bg-body-secondary">
-    <div class="container " style="height:50vh !important">
+    <div class="container " style="height:80vh !important">
         <div class="justify-content-between d-flex  container-fluid mb-2 position-relative ">
             <div class="mt-3">
                 <h3>Patient Records</h3>
@@ -69,7 +69,7 @@
                             <td>
                                 @if (item.IsFinalize == true)
                                 {
-                                    <a asp-action="GeneratePDF" asp-route-requestid="@item.RequestId" class="btn btn-outline-info rounded">View</a>
+                                    <a asp-action="GeneratePDF" asp-route-requeid="@item.RequestId" class="btn btn-outline-info rounded">View</a>
                                 }
 
                             </td>
