--- a/HelloDoc/Views/AdminDash/ViewUpload.cshtml
+++ b/HelloDoc/Views/AdminDash/ViewUpload.cshtml
@@ -21,7 +21,7 @@
 
             @* ----------------------------------------------------------------- *@
 
-            <form asp-action="uploadfile" asp-controller="Admin_Dash" asp-route-reqid="@Model.requestid" enctype="multipart/form-data">
+            <form asp-action="uploadfile" asp-controller="AdminDash" asp-route-reqid="@Model.requestid" enctype="multipart/form-data">
                 <div class="input-group row p-2 mx-auto mt-3" style="height:60px">
                     <div class="d-flex">
                         <label for="fileUpload" class="col d-flex">
