--- a/HelloDoc/Views/Home/AccessDenied.cshtml
+++ b/HelloDoc/Views/Home/AccessDenied.cshtml
@@ -5,59 +5,22 @@
    
 }
 
-<!DOCTYPE html>
 <html>
 <head>
-    <title>@ViewData["Title"]</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet" />
-      <style>
-
-        body {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: #f8f9fa;
-        }
-        
-        .access-denied-container {
-            text-align: center;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
-            background-color: #ffffff;
-        }
-        
-        .animated-background {
-            width: 100%;
-            height: 200px; 
-            background: linear-gradient(45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
-            background-size: 400% 400%;
-            animation: gradient 5s ease infinite;
-            border-radius: 10px;
-        }
-     
-      </style>
+  
+     <title></title>
+    <link rel="stylesheet" href="~/css/AccessDenied.css"  asp-append-version="true" />
+  
 </head>
 <body>
-    <div class="container access-denied-container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>Access Denied</h1>
-                <p>You don't have permission to access this page.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="animated-background"></div>
-            </div>
+    <div class="wrapper">
+        <div class="box">
+            <h1>403</h1>
+            <p>Sorry, it's not allowed to go beyond this point!</p>
+            <p><a href="/">Please, go back this way.</a></p>
         </div>
     </div>
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
- <script src="
-https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js
-"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="~/js/AccessDenied.js"></script>
 </body>
+
 </html>
