--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -9,13 +9,14 @@
         <tr class="fs-5">
             <th scope="col">Name</th>
             <th scope="col"></th>
+            <th scope="col"></th>
             <th scope="col">Date of Birth</th>
             <th scope="col">requestor</th>
             <th scope="col">Requested Date</th>
             <th scope="col">Phone</th>
             <th scope="col">Address</th>
             <th scope="col">Notes</th>
-            <th scope="col">Chatwith</th>
+         
             <th scope="col">Action</th>
         </tr>
     </thead>
@@ -49,6 +50,15 @@
             <tr class="text-light" style="background-color:@color">
                 <td class="my-auto">
                     @item.Name
+                </td>
+                <td>
+                    @if (item.physicianid != null)
+                    {
+                        <button type="button" class="btn btn-danger border border-2 text-white rounded  ms-1" data-bs-toggle="dropdown" aria-expanded="false">
+                            Assigned
+                        </button>
+
+                    }
                 </td>
                 <td>
                     <a href="Mailto:@item.Email">
@@ -101,27 +111,24 @@
                 </td>
                 <td class="my-auto">@item.Address</td>
                 <td class="my-auto">@item.Notes</td>
-                <td class="my-auto">
-                    <button class="btn border rounded text-white">
-                        <svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-lines-fill" viewBox="0 0 16 16">
-                            <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z" />
-                        </svg>Provider
-                    </button>
-                </td>
+               
                 <td class="my-auto text-white">
                     <button type="button" class="btn border border-2 text-white rounded  dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                         Action
                     </button>
                     <ul class="dropdown-menu text-muted">
-                        <li>
-                            <button class="dropdown-item" type="button" onclick="togglemodal(this)" data-Req="@item.requestid">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
-                                    <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z" />
-                                    <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z" />
-                                    <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0z" />
-                                </svg>Assign Case
-                            </button>
-                        </li>
+                        @if (item.physicianid == null)
+                        {
+                            <li>
+                                <button class="dropdown-item" type="button" onclick="togglemodal(this)" data-Req="@item.requestid">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
+                                        <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z" />
+                                        <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z" />
+                                        <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0z" />
+                                    </svg>Assign Case
+                                </button>
+                            </li>
+                        }
                         <li>
 
                             <button type="button" onclick="openModal(this)" data-requestid="@item.requestid" data-name="@item.Name" class="dropdown-item">
