--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
@@ -140,16 +140,7 @@
                                 </button>
                             </a>
                         </li>
-                        <li>
-                            <a asp-action="Sendorder" asp-route-id="@item.requestid">
-                                <button class="dropdown-item" href="#">
-                                    <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-                                    </svg>Orders
-                                </button>
-                            </a>
-                        </li>
+                       
                         <li>
                             <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
                                 <button class="dropdown-item">
@@ -177,7 +168,7 @@
                             <a class="dropdown-item" href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
-                                </svg>Doctor Notes
+                                </svg>Conclude Care
                             </a>
                         </li>
                         <li>
