--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
@@ -113,25 +113,8 @@
                         Action
                     </button>
                     <ul class="dropdown-menu text-muted">
-                        <li>
-                            <button class="dropdown-item" type="button" onclick="togglemodal(this)" data-Req="@item.requestid">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
-                                    <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z" />
-                                    <path d="M3 2.5a.5.5 0 0 1 .5-.5H4a.5.5 0 0 0 0-1h-.5A1.5 1.5 0 0 0 2 2.5v12A1.5 1.5 0 0 0 3.5 16h9a1.5 1.5 0 0 0 1.5-1.5v-12A1.5 1.5 0 0 0 12.5 1H12a.5.5 0 0 0 0 1h.5a.5.5 0 0 1 .5.5v12a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5z" />
-                                    <path d="M10.854 7.854a.5.5 0 0 0-.708-.708L7.5 9.793 6.354 8.646a.5.5 0 1 0-.708.708l1.5 1.5a.5.5 0 0 0 .708 0z" />
-                                </svg>Assign Case
-                            </button>
-                        </li>
-                        <li>
-
-                            <button type="button" onclick="openModal(this)" data-requestid="@item.requestid" data-name="@item.Name" class="dropdown-item">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
-                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
-                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
-                                </svg>Cancel Case
-                            </button>
-
-                        </li>
+                       
+                      
                         <li>
                             <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                 <button class="dropdown-item">
@@ -156,11 +139,11 @@
                             </a>
                         </li>
                         <li>
-                            <button type="button" class="dropdown-item" onclick="togglemodalblock(this)" data-blockid="@item.requestid" data-blockname="@item.Name">
+                            <a asp-action="Accept" asp-controller="ProviderDashBoard" type="button" class="dropdown-item" asp-route-id="@item.requestid">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
-                                </svg>Block Patient
-                            </button>
+                                </svg>Accept
+                            </a>
                         </li>
                     </ul>
                 </td>
