--- a/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableNew.cshtml
@@ -140,7 +140,7 @@
 
                         </li>
                         <li>
-                            <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
+                            <a asp-action="ViewCase" asp-controller="AdminDash" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
