--- a/HelloDoc/Views/AdminDash/ViewNotes.cshtml
+++ b/HelloDoc/Views/AdminDash/ViewNotes.cshtml
@@ -2,7 +2,14 @@
 
 @{
     ViewData["Title"] = "viewCase";
-    Layout = "~/Views/Shared/_AdminDash.cshtml";
+    if (ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
+    }
+    if (!ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_AdminDash.cshtml";
+    }
 }
 
 
@@ -13,13 +20,15 @@
             <h4 class="h4 mt-5 mb-3">Notes</h4>
         </div>
         <div class="d-flex">
-            <a class="btn btn-outline-info mt-5 mb-3 ms-auto" asp-action="" asp-controller="">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16"
-                     height="16" fill="currentColor" class="bi bi-chevron-left fw-medium mb-1" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
-                </svg>Back
-            </a>
+            @if (!ViewBag.IsPhysican)
+            {
+                <a asp-action="AdminDash" asp-controller="AdminDash"><button type="button" class="btn btn-primary btn mt-5  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+
+            }
+            else
+            {
+                <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn mt-5  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+            }
         </div>
     </div>
 </div>
