--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableNew.cshtml
@@ -116,7 +116,7 @@
                        
                       
                         <li>
-                            <a asp-action="ViewCase" asp-route-id="@item.reqclientid" asp-route-status="@item.status">
+                            <a asp-action="ViewCase" asp-controller="ProviderDashBoard" asp-route-id="@item.reqclientid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -127,7 +127,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-action="ViewNotes" asp-route-id="@item.requestid">
+                            <a asp-action="ViewNotes" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                         <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
