--- a/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/Shared/_ProviderDashBoard.cshtml
@@ -79,9 +79,10 @@
             <div class="w-100 shadow  px-2 px-md-5  pt-2  border-5 border-bottom-5 d-none d-sm-block pb-1  ">
                 <ul class="nav nav-tabs-info nav-underline   fs-4 " id="pills-tab" role="tablist">
                     <li class="nav-item ">
-                        <a asp-action="AdminDash" asp-controller="AdminDash" style="text-decoration:none">
+                        <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard" style="text-decoration:none">
                             <button class="nav-link  text-info
-                             @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderDashBoard" ? "active" : "")">
+                             @(ViewContext.ActionDescriptor.RouteValues["action"] == "ProviderDashBoard" ||
+                            ViewContext.ActionDescriptor.RouteValues["action"] == "ViewCase"? "active" : "")">
                                 Dashboard
                             </button>
                         </a>
