--- a/HelloDoc/Views/AdminDash/AdminProfile.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminProfile.cshtml
@@ -5,8 +5,8 @@
 }
 
 
-<div class="container-fluid bg-body-secondary ">
-<div class="container bg-body-secondary px-0 py-4 backbtn d-flex align-items-center py-3 justify-content-between">
+<div class="container-fluid bg-body-secondary  mb-3">
+<div class="container bg-body-secondary px-0  backbtn d-flex align-items-center py-3  justify-content-between">
 
     <h4 class="text-body align-middle my-0 ">My Profile</h4>
     <a class="p-2 border text-decoration-none border-info rounded bg-body-secondary">
@@ -140,7 +140,7 @@
             }
 
         </div>
-        <div class="d-flex justify-content-end my-1">
+        <div class="d-flex justify-content-end ">
             <button onclick="toggleEdit()" type="button" class="btn border-none bg-info p-3 text-light fw-semibold me-4" id="EditBtn">
                 Edit
             </button>
