--- a/HelloDoc/Views/AdminDash/EncounterForm.cshtml
+++ b/HelloDoc/Views/AdminDash/EncounterForm.cshtml
@@ -1,35 +1,42 @@
 ﻿@model DAL.ViewModel.Encounter
 
+
 @{
     ViewData["Title"] = "Encounter Form";
-    Layout = "~/Views/Shared/_AdminDash.cshtml";
+    string controller = null;
+    if (ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
+        controller = "ProviderDashBoard";
+    }
+    if (!ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_AdminDash.cshtml";
+        controller = "AdminDash";
+    }
 }
 
-
-<section class="bg-light">
-    <div class="container bg-light mt-4">
+<section class="bg-body-secondary border-2" style="margin-bottom:3rem">
+    <div class="container bg-body-secondary mt-4">
         <div class="d-flex justify-content-between my-3">
             <div class="d-flex">
-                <span class="fs-2 text-muted fw-bold">Encounter Form</span>
+                <span class="fs-2  fw-bold">Encounter Form</span>
             </div>
             <div class="d-flex justify-content-end align-items-center">
-                <a asp-action="" class="btn btn-outline-info text-center p-2 ">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                         width="16"
-                         height="16"
-                         fill="currentColor"
-                         class="bi bi-chevron-left"
-                         viewBox="0 0 16 16">
-                        <path fill-rule="evenodd"
-                              d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
-                    </svg>
-                    <span> back</span>
-                </a>
+                @if (!ViewBag.IsPhysican)
+                {
+                    <a asp-action="AdminDash" asp-controller="AdminDash"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+
+                }
+                else
+                {
+                    <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+                }
             </div>
         </div>
-        <div class="container bg-white p-3">
+        <div class="container white-bag p-3">
             <h2 class="text-center fw-bolder my-3 text-info">Medical Report - Confidential</h2>
-            <form method="post" id="encounterForm" asp-action="EncounterForm" asp-route-id="@Model.requestid">
+            <form method="post" id="encounterForm" asp-controller="@controller" asp-action="EncounterForm" asp-route-id="@Model.requestid">
                 <input class="d-none" value="0" />
                 <div class="row gx-2">
                     <div class="col-md-6">
@@ -265,11 +272,15 @@
                 </div>
                 <div class="d-flex flex-row-reverse mb-3">
                     <button class="p-2 btn btn-outline-info mx-1">Cancel</button>
-                    <a asp-action="Finalize" asp-controller="AdminDash" asp-route-id="@Model.requestid">
-                        <button type="button" class="btn p-2 mx-1" style="background-color:indigo; color:white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                            Finalize
-                        </button>
-                    </a>
+                    @if (ViewBag.IsPhysican)
+                    {
+                        <a asp-action="Finalize" asp-controller="AdminDash" asp-route-id="@Model.requestid">
+                            <button type="button" class="btn p-2 mx-1" style="background-color:indigo; color:white" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                Finalize
+                            </button>
+                        </a>
+                    }
+                   
                     <button class="btn btn-info mx-1" type="submit" id="savachanges">Save Changes</button>
                 </div>
             </form>
