--- a/HelloDoc/Views/AdminDash/RecordsMenu/PatientHistory.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/PatientHistory.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="container-fluid bg-light" style="height:80%!important">
+<div class="container-fluid bg-light mb-5" style="height:80%!important">
     <h4 class="py-3">Patient history</h4>
     <div class="mx-0 row px-4 border-bottom-0 border border-secondary rounded-top pt-3 pb-4 ">
         <div class="col-sm-12 col-md-12 col-lg-3 form-floating my-3">
