--- a/HelloDoc/Views/AdminDash/RecordsMenu/SearchRecords.cshtml
+++ b/HelloDoc/Views/AdminDash/RecordsMenu/SearchRecords.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_AdminDash.cshtml";
 }
 
-<div class="container-fluid bg-light">
+<div class="container-fluid bg-light mb-5">
     <div class="d-flex justify-content-between ">
         <h4 class="my-3">Search Records</h4>
         <div>
