--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderDashBoard.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/ProviderDashBoard.cshtml
@@ -170,7 +170,87 @@
         </div>
 
     </div>
+    @* -----------Modals------------------------ *@
+    <div class="modal fade" id="TransferModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h1 class="modal-title fs-5  text-white" id="exampleModalLabel">Transfer Request</h1>
+                    <button type="button" class="btn-close shadow-none" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="TransferModalSubmit">
+                    <div class="modal-body">
+                        <p> This request will be transfer to admin</p>
 
+                       
+                        <input id="trarequest" name="transferid" hidden />
+
+
+                        <div class="form-floating mt-3">
+                            <textarea class="form-control border border-info" name="Descriptionoftra" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                            <label for="floatingTextarea2">Description</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <div class="d-flex justify-content-end mt-3">
+                            <button type="submit" class="btn btn-info">Confirm</button>
+                            <button type="button" data-bs-dismiss="modal" class="btn btn-outline-info ms-3">cancle</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    @* -----------Modals------------------------ *@
+    @* -----------Modals------------------------ *@
+    @* -----------SendAgreement Modal  --------------------------- *@
+    <div class="modal" id="SendAgreementModal" tabindex="-1" role="dialog" aria-labelledby="SendAgreementCase" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Send Agreement</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="SendAgreementModalSubmit">
+                    <div class="modal-body">
+                        <div class="d-flex flex-column">
+                            <div>
+                                <svg height="15" width="15" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                                    <circle fill="#5fbc61" r="45" cx="50" cy="50" stroke="grey" stroke-width="3" />
+                                </svg>
+                                <span class="ms-2">Patient</span>
+                            </div>
+                            <input type="hidden" id="sendagreementid" name="sendagreementid" />
+                            <div class="mt-2">
+                                <p>To Send Agrrement Papers Make Sure yor are updating the correct contact information Below for the responsiblelity party</p>
+                            </div>
+                            <div class="mb-3  text-muted">
+
+
+                                <div class="form-floating mb-3">
+                                    <input class="form-control" placeholder="Leave a comment here" id="agreementemail" name="blockreason">
+                                    <label for="floatingTextarea2" class="text-muted">Email</label>
+                                </div>
+                                <div class="form-floating">
+                                    <input class="form-control" placeholder="Leave a comment here" id="agreementphone" name="blockreason">
+                                    <label for="floatingTextarea2" class="text-muted">Phone No</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer border-0">
+                            <button type="submit" class="btn bg-info text-white" id="SendAgreementBtn">Confirm</button>
+                            <button type="button" class="btn  border border-info text-info" data-bs-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+
+    @* -----------SendAgreement Modal  --------------------------- *@
+    @* -----------Modals------------------------ *@
     
 
     @* -------------------------------Search--------------------------------------------- *@
