--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableActive.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableActive.cshtml
@@ -133,7 +133,7 @@
                     </button>
                     <ul class="dropdown-menu text-muted">
                         <li>
-                            <a asp-action="ViewUpload" asp-route-id="@item.requestid">
+                            <a asp-action="ViewUpload" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
                                         <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z" />
@@ -144,7 +144,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-action="Sendorder" asp-route-id="@item.requestid">
+                            <a asp-action="SendOrder" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <button class="dropdown-item" href="#">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
@@ -154,7 +154,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                            <a asp-action="ViewCase" asp-controller="ProviderDashBoard" asp-route-id="@item.reqclientid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
@@ -165,7 +165,7 @@
                             </a>
                         </li>
                         <li>
-                            <a asp-action="ViewNotes" asp-route-id="@item.requestid">
+                            <a asp-action="ViewNotes" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-text" viewBox="0 0 16 16">
                                         <path d="M5 10.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m0-2a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5" />
