--- a/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
+++ b/HelloDoc/Views/ProviderDashBoard/DashBoard/_ProviderTableConclude.cshtml
@@ -130,7 +130,7 @@
                     </button>
                     <ul class="dropdown-menu text-muted">
                         <li>
-                            <a asp-action="ViewUpload" asp-route-id="@item.requestid">
+                            <a asp-action="ViewUpload" asp-controller="ProviderDashBoard" asp-route-id="@item.requestid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-clipboard2-check" viewBox="0 0 16 16">
                                         <path d="M9.5 0a.5.5 0 0 1 .5.5.5.5 0 0 0 .5.5.5.5 0 0 1 .5.5V2a.5.5 0 0 1-.5.5h-5A.5.5 0 0 1 5 2v-.5a.5.5 0 0 1 .5-.5.5.5 0 0 0 .5-.5.5.5 0 0 1 .5-.5z" />
@@ -142,7 +142,7 @@
                         </li>
                        
                         <li>
-                            <a asp-action="ViewCase" asp-route-id="@item.reqclientid">
+                            <a asp-action="ViewCase" asp-controller="ProviderDashBoard" asp-route-id="@item.reqclientid">
                                 <button class="dropdown-item">
                                     <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-journal-arrow-up" viewBox="0 0 16 16">
                                         <path fill-rule="evenodd" d="M8 11a.5.5 0 0 0 .5-.5V6.707l1.146 1.147a.5.5 0 0 0 .708-.708l-2-2a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L7.5 6.707V10.5a.5.5 0 0 0 .5.5" />
