--- a/HelloDoc/Views/AdminDash/CreateRequest.cshtml
+++ b/HelloDoc/Views/AdminDash/CreateRequest.cshtml
@@ -1,30 +1,37 @@
 ﻿@model DAL.ViewModel.CreateRequest
+
 @{
     ViewData["Title"] = "CreateRequest";
-    Layout = "~/Views/Shared/_AdminDash.cshtml";
+    string controller = null;
+    if (ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_ProviderDashBoard.cshtml";
+        controller = "ProviderDashBoard";
+    }
+    if (!ViewBag.IsPhysican)
+    {
+        Layout = "~/Views/Shared/_AdminDash.cshtml";
+        controller = "AdminDash";
+    }
 }
 
-<div class="container-fluid bg-body-secondary  pb-4">
+<div class="container-fluid bg-body-secondary " style="margin-bottom:3.5rem !important">
     <div class="mx-auto pt-3 mb-3 container-sm" id="secondDiv">
         <div class="backbtn d-flex justify-content-between px-3">
             <h4 class="text-body my-auto">Submit Information</h4>
-            <a asp-controller="PatientDashBoard" asp-action="PatientDashboard"
-               class="p-2 border text-decoration-none border-info rounded bg-transparent">
-                <svg xmlns="http://www.w3.org/2000/svg"
-                     width="16"
-                     height="16"
-                     fill="currentColor"
-                     class="bi bi-chevron-left"
-                     viewBox="0 0 16 16">
-                    <path fill-rule="evenodd"
-                          d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0" />
-                </svg>
-                <span class="mx-2 text-info">Back</span>
-            </a>
+            @if (!ViewBag.IsPhysican)
+            {
+                <a asp-action="AdminDash" asp-controller="AdminDash"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+
+            }
+            else
+            {
+                <a asp-action="ProviderDashBoard" asp-controller="ProviderDashBoard"><button type="button" class="btn btn-primary btn  border border-info bg-transparent text-info shadow-none text-decoration-none ">Back</button></a>
+            }
         </div>
 
         <div id="FormOfPatientRequest" class="container-sm mt-3 p-3 gx-4 mb-3  bg-white shadow">
-            <form class="form-floating" method="post" asp-action="CreateRequest">
+            <form class="form-floating" method="post" asp-controller="@controller" asp-action="CreateRequest">
                 <!-- Patient Information -->
                 <div class="row gx-4">
                     <h4 class="fw-semibold text-body">Patient</h4>
